  and close_changes_on_close, to control whether underlying storages
  are closed when the DemoStorage is closed.

  https://bugs.launchpad.net/zodb/+bug/118512

- Removed the dependency on zope.proxy.

- Removed support for the _p_independent mini framework, which was
  made moot by the introduction of multi-version concurrency control
  several years ago.

Bugs Fixed
----------

- BTree sets and tree sets didn't correctly check values passed to
  update or to constructors, causing Python to exit under certain
  circumstances.

3.10.0a2 (2010-05-04)
=====================

New Features
------------

- Added a '--kill-old-on-full' argument to the backup options:  if passed,
  remove any older full or incremental backup files from the repository after
  doing a full backup. (https://bugs.launchpad.net/zope2/+bug/143158)

- When transactions are aborted, new object ids allocated during the
  transaction are saved and used in subsequent transactions. This can
  help in situations where object ids are used as BTree keys and the
  sequential allocation of object ids leads to conflict errors.

- ZEO servers now support a server_status method for for getting
  information on the number of clients, lock requests and general
  statistics.

- ZEO clients now support a client_label constructor argument and
  client-label configuration-file option to specify a label for a
  client in server logs. This makes it easier to identify specific
  clients corresponding to server log entries, especially when there
  are multiple clients originating from the same machine.

- The mkzeoinst script has been moved to a separate project:

    http://pypi.python.org/pypi/zope.mkzeoinstance

  and is no-longer included with ZODB.

- Improved ZEO server commit lock logging.  Now, locking activity is
  logged at the debug level until the number of waiting lock requests
  gets above 3.  Log at the critical level when the number of waiting
  lock requests gets above 9.
